Closed Bug 1604001 Opened 4 years ago Closed 4 years ago

Test harnesses do not know the process type of the fork server

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla73
Tracking Status
firefox73 --- fixed

People

(Reporter: sinker, Assigned: sinker)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:72.0) Gecko/20100101 Firefox/72.0

Steps to reproduce:

The fork server has added a new process type that mochitest and other test harnesses don't know. This bug would fix the issue of the new process type for harnesses.

Assignee: nobody → thinker.li
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → ASSIGNED
Attachment #9115984 - Attachment description: Bug 1604001 - Add the missing process type of the fork server for tests. → Bug 1604001 - Add the missing process type of the fork server for tests. r=gsvelto
Pushed by dluca@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1284971836f9
Add the missing process type of the fork server for tests. r=gsvelto
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/8e1b11b00157
Add the missing process type of the fork server for tests: fix flake8 linting issue. a=lint-fix CLOSED TREE
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla73
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: