Bug 1604001 - Add the missing process type of the fork server for tests. r=gsvelto

Differential Revision: https://phabricator.services.mozilla.com/D57218

--HG--
extra : moz-landing-system : lando