widget/ProcInfo.h
@@ -35,6 +35,9 @@ enum class ProcType {
   RDD,
   Socket,
   RemoteSandboxBroker,
+#ifdef MOZ_ENABLE_FORKSERVER
+  ForkServer,
+#endif
   // Unknown type of process
   Unknown,
   Max = Unknown,
