testing/mochitest/mochitest_options.py
@@ -838,6 +838,7 @@ class MochitestArguments(ArgumentContainer):
         options.leakThresholds = {
             "default": options.defaultLeakThreshold,
             "tab": options.defaultLeakThreshold,
+            "forkserver": options.defaultLeakThreshold,
             # GMP rarely gets a log, but when it does, it leaks a little.
             "gmplugin": 20000,
             "rdd": 400,
