testing/mozbase/mozleak/mozleak/leaklog.py
@@ -164,7 +164,7 @@ def process_leak_log(leak_log_file, leak_thresholds=None,
 
     # This list is based on kGeckoProcessTypeString. ipdlunittest processes likely
     # are not going to produce leak logs we will ever see.
-    knownProcessTypes = ["default", "plugin", "tab", "gmplugin", "gpu", "rdd", "vr", "socket"]
+    knownProcessTypes = ["default", "forkserver", "plugin", "tab", "gmplugin", "gpu", "rdd", "vr", "socket"]
 
     for processType in knownProcessTypes:
         log.info("TEST-INFO | leakcheck | %s process: leak threshold set at %d bytes"
